[tool.poetry]
name = "projet-stage"
version = "0.1.0"
description = "projet du stage dcp"
authors = ["clement"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pdfplumber = "^0.11.1"
flask = "^3.0.3"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
fastembed = "^0.3.1"
chromadb = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
