[tool.poetry]
name = "projet-stage"
version = "0.1.0"
description = "projet du stage dcp"
authors = ["clement"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pdfplumber = "^0.11.1"
flask = "^3.0.3"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
fastembed = "^0.3.1"
chromadb = "^0.5.3"
pypdf = "^4.2.0"
grpcio = "^1.64.1"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
protobuf = "^5.27.1"
ollama = "^0.2.1"
flask-babel = "^4.0.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
